--- a/saminda/cipres-airavata/cipres-portal/.classpath
+++ b/saminda/cipres-airavata/cipres-portal/.classpath
@@ -88,6 +88,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/globus/globus-opensaml-1.1/gt4/globus-opensaml-1.1-gt4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/globus/gridshib-common-0_5_0/gt4/gridshib-common-0_5_0-gt4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/globus/gridshib-saml-tools-0_5_0/gt4/gridshib-saml-tools-0_5_0-gt4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/sdk"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdk${my.name}"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
