--- a/saminda/cipres-airavata/sdk/src/main/resources/workbench.properties
+++ b/saminda/cipres-airavata/sdk/src/main/resources/workbench.properties
@@ -1,8 +1,6 @@
 tool.process_worker_command=${process_worker_command}
 application.instance=${portal.url}
-use.rest.callback=${use.rest.callback}
-portal.callback.url=${portal.callback.url}
-rest.callback.url=${rest.callback.url}
+job.callback.url=${job.callback.url}
 disabled.resources.file=${disabled.resources.file}
 checkJobs.poll.seconds= ${checkJobs.poll.seconds}
 loadResults.poll.seconds= ${loadResults.poll.seconds}
