--- a/saminda/cipres-airavata/cipres-airavata-integration/pom.xml
+++ b/saminda/cipres-airavata/cipres-airavata-integration/pom.xml
@@ -27,145 +27,42 @@
         <!-- AIRAVATA modules -->
         <dependency>
             <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-workflow-model-core</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-workflow-model-component</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-message-monitor</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-client-api</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-message-broker</artifactId>
-            <version>0.11</version>
+            <artifactId>airavata-api-stubs</artifactId>
+            <version>${airavata.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.airavata</groupId>
             <artifactId>airavata-common-utils</artifactId>
-            <version>0.11</version>
+            <version>${airavata.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-workflow-tracking</artifactId>
-            <version>0.11</version>
+            <artifactId>airavata-data-models</artifactId>
+            <version>${airavata.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-jpa-registry</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-registry-api</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-rest-client</artifactId>
-            <version>0.11</version>
-        </dependency>
-
-        <!-- JCR Support -->
-        <!-- TODO need clean up -->
         <dependency>
             <groupId>org.apache.airavata</groupId>
             <artifactId>airavata-gfac-schema-utils</artifactId>
-            <version>0.11</version>
+            <version>${airavata.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-gfac-core</artifactId>
-            <version>0.11</version>
+            <artifactId>airavata-model-utils</artifactId>
+            <version>${airavata.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-gfac-ec2</artifactId>
-            <version>0.11</version>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.1</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${org.slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-            <version>${org.slf4j.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${org.slf4j.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.jcr</groupId>
-            <artifactId>jcr</artifactId>
-            <version>${jcr.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.airavata</groupId>
-            <artifactId>airavata-workflow-execution-context</artifactId>
-            <version>0.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derbyclient</artifactId>
-            <version>${derby.version}</version>
-        </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.globusonline</groupId>-->
-            <!--<artifactId>transfer-api-client-java</artifactId>-->
-            <!--<version>0.10.8</version>-->
-        <!--</dependency>-->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.3</version>
+            <groupId>org.apache.xmlbeans</groupId>
+            <artifactId>xmlbeans</artifactId>
+            <version>${xmlbeans.version}</version>
         </dependency>
     </dependencies>
     <properties>
-        <axis2.version>1.5.1</axis2.version>
-        <derby.version>10.9.1.0</derby.version>
-        <org.slf4j.version>1.7.2</org.slf4j.version>
-        <log4j.version>1.2.16</log4j.version>
-        <axiom.version>1.2.8</axiom.version>
-        <surefire.version>2.12</surefire.version>
-        <junit.version>4.7</junit.version>
-        <jcr.version>2.0</jcr.version>
         <xmlbeans.version>2.5.0</xmlbeans.version>
-        <xpp3.version>1.1.6</xpp3.version>
-        <xpp5.version>1.2.8</xpp5.version>
-        <xsul.version>2.10.7</xsul.version>
-        <xsul5.version>1.2.7</xsul5.version>
-        <gpel.version>1.0.9</gpel.version>
-        <atomixmiser.version>0.9.4</atomixmiser.version>
-        <yfilter.version>1.0</yfilter.version>
-        <jython.version>2.5.3</jython.version>
-        <jersey.version>1.13</jersey.version>
-        <tomcat.version>7.0.41</tomcat.version>
-        <cargo.version>1.3.1</cargo.version>
-        <oa4mp.version>1.0.6</oa4mp.version>
-        <antrun.version>1.6</antrun.version>
-        <bouncy.castle.version>1.45</bouncy.castle.version>
-        <jglobus.version>2.0.6</jglobus.version>
-        <ebay.cors.filter>1.0.0</ebay.cors.filter>
+        <airavata.version>0.12-SNAPSHOT</airavata.version>
     </properties>
 </project>
