refactored CIPRES sdk to switch between the existing workbench framework and Airavata client calls

--- a/saminda/cipres-airavata/cipres-portal/.classpath
+++ b/saminda/cipres-airavata/cipres-portal/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="portal2/src/test/java"/>
 	<classpathentry kind="src" path="portal2/src/main/java"/>
 	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
@@ -28,5 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/sdk"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
